src/diagrams/state/snapshots/figo__diagrams__state__tests__aligned_label_avoids_sibling_junction.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                                    +------------+
                              *────>|    TOP     |
                                    +------------+
                                           |
                                           |
                                           |
                                           |
                                           right_branch_label
                                           |
                                           |
                          left_branch_label+--------------------+
                                           |                    |
                                           |                    |
                                           |                    |
                                           |                    |
                                           |                    |
                                           |                    |
                                           |                    |
                                    +------v-----+       +------v-----+
                                    |    LEFT    |       |   RIGHT    |
                                    +------------+       +------------+
