src/diagrams/state/snapshots/figo__diagrams__state__tests__gap_riders_stack_instead_of_overlapping.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                       +------------+      +------------+
                       |     A      |      |     E      |
                       +------------+      +------------+
                              |                   |
                              |                   |
                              |                   |
                              |                   |
                              |                   |
                              +-------------------+
                LLLL LLLL LLLL LLLL LLLL LLLL     |
                              |       RRRR RRRR RRRR RRRR RRRR
                              |                 RRRR
                              |                   |
                              |                   |
                       +------v-----+      +------v-----+
                       |     B      |      |     D      |
                       +------------+      +------------+
