src/diagrams/state/snapshots/figo__diagrams__state__tests__overlapping_labels_unicode.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                                                          ╭────────────╮
                                                    ●────>│     A      │
                                                          ╰────────────╯
                                                                 │
                                                        very_long_label_one
                                                                 │
                                                                 │
                                                          ╭──────▼─────╮
                                                          │     B      │
                                                          ╰────────────╯
                                                                 │
                                                        very_long_label_two
                                                                 │
                                                                 │
                                                          ╭──────▼─────╮
                                                          │     C      │
                                                          ╰────────────╯
                                                                 │
                                                        very_long_label_three
                                                                 │
                                                                 │
                                                          ╭──────▼─────╮
                                                          │╭──────────╮│
                                                          ││    D     ││
                                                          │╰──────────╯│
                                                          ╰────────────╯
