src/diagrams/state/snapshots/figo__diagrams__state__tests__riding_label_rides_leg_with_rails.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                          ╭────────────╮
                    ●────>│    Idle    │
                          ╰────────────╯
                                 │
                                 │
                                 │
                                 ├───────go_b────────┐
                                 │                   │
                               go_a                  │
                                 │                   │
                          ╭──────▼─────╮      ╭──────▼─────╮
                          │     A      │      │     B      │
                          ╰────────────╯      ╰────────────╯
