src/diagrams/state/snapshots/figo__diagrams__state__tests__riding_label_wraps_clear_of_sibling_leg.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                +------------+
          *────>|    TOP     |
                +------------+
                       |
                       |
                       |
                       sib
                       +-------------------+
                       |                   |
       a_very_long_riding_branch_label_    |
                     here                  |
                       |                   |
                +------v-----+      +------v-----+
                |    MID     |      |    SIDE    |
                +------------+      +------------+
