src/diagrams/state/snapshots/figo__diagrams__state__tests__serial_fsm_ascii.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                                      +------------+
                                *────>|    Idle    |
                                      +------------+
                                             |
                                           start
                                             |
                                      +------v-----+
                                      |  Running   |
                                      +------------+
                                             |
                                          finish
                                             |
                                      +------v-----+
                                      |+----------+|
                                      ||   Done   ||
                                      |+----------+|
                                      +------------+
