src/diagrams/state/snapshots/figo__diagrams__state__tests__serial_fsm_unicode.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                                      ╭────────────╮
                                ●────>│    Idle    │
                                      ╰────────────╯
                                           start
                                             │
                                             │
                                      ╭──────▼─────╮
                                      │  Running   │
                                      ╰────────────╯
                                          finish
                                             │
                                             │
                                      ╭──────▼─────╮
                                      │╭──────────╮│
                                      ││   Done   ││
                                      │╰──────────╯│
                                      ╰────────────╯
