src/diagrams/state/snapshots/figo__diagrams__state__tests__two_independent_states_unicode.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                          ╭────────────╮      ╭────────────╮
                    ●────>│     A      │      │╭──────────╮│
                          ╰────────────╯      ││    B     ││
                                              │╰──────────╯│
                                              ╰────────────╯
