src/diagrams/state/snapshots/figo__diagrams__state__tests__upward_riding_label.snap
---
source: src/diagrams/state/mod.rs
expression: out
---
                          +------------+
                    *────>|    TOP     |
                          +------^-----+
                                 |
                             back_edge
                                 |
                                 +------branch-------+
                                 |                   |
                                 |                   |
                                 |                   |
                          +------v-----+      +------v-----+
                          |    MID     |      |    SIDE    |
                          +------------+      +------------+
